# BurlyMCP

./: .env.development  .env.example  .env.testing  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  COVERAGE_SETUP.md  Dockerfile  Dockerfile.runtime  LICENSE  Makefile  README.md  SECURITY_FIXES.md  TESTING.md  TEST_TRIAGE_TASKS.md  bandit-report.json  blog-post-kiro-experience.md  container_startup.py  coverage.json  docker-compose.override.yml  docker-compose.yml  http_bridge.py  pyproject.toml  pyproject_clean.toml  pytest.ini  requirements-dev.txt  security_validation.py  test_all_metadata.yaml  test_confirmation.yaml  test_excessive_timeout.yaml  test_incomplete.yaml  test_invalid_notify.yaml  test_invalid_schema.yaml  test_invalid_timeout.yaml  test_invalid_tools.yaml  test_invalid_types.yaml  test_large.yaml  test_mutating.yaml  test_no_tools.yaml  (+1 more)
.github/workflows/: .gitkeep  ci.yml  coverage.yml  docker-publish.yml.disabled  docs.yml  publish-image.yml  pypi-publish.yml.disabled  release-validation.yml.disabled  release.yml  release.yml.disabled  security.yml  security.yml.disabled  test.yml  validate-files.yml
.kiro/hooks/: api-doc-sync.kiro.hook  check-task.kiro.hook  dev-server-port-manager.kiro.hook  env-security-validator.kiro.hook  finish-feature.kiro.hook  finish-task-guard.kiro.hook  post-task-test-analysis.md  security-quick-pass.kiro.hook  start-task-guard.kiro.hook  yaml-json-validator.kiro.hook
.kiro/specs/burly-mcp/: design.md  requirements.md  tasks.md
.kiro/specs/docker-image-naming-fix/: design.md  requirements.md  tasks.md
.kiro/specs/project-restructure/: design.md  requirements.md  tasks.md
.kiro/specs/standalone-service-container/: design.md  requirements.md  tasks.md
.kiro/steering/: check-task-workflow.md  feature-based-specs.md  product.md  project-setup-template.md  structure.md  tech.md  test-maintenance.md
docker/: Dockerfile  README.md  docker-compose.yml
docs/: Makefile  README.md  api-contract.md  conf.py  config.md  container-registry.md  container-security.md  contributing.md  deployment.md  index.rst  mcp-explained.md  monitoring.md  notifications.md  open-webui.md  operations.md  release-process.md  release-validation.md  runbook.md  security.md  troubleshooting.md  validation-system.md
docs/api/: README.md  index.rst
docs/api/_autosummary/: burly_mcp.audit.rst  burly_mcp.notifications.rst  burly_mcp.policy.rst  burly_mcp.security.rst  burly_mcp.server.rst  burly_mcp.tools.rst
docs/security/: README.md  best-practices.md  configuration-examples.md  threat-model.md  vulnerability-reporting.md
examples/compose/: README.md  docker-compose.minimal.yml  docker-compose.override.yml  docker-compose.privileged.yml  docker-compose.yml
examples/config/: baseline.yaml  blog-publish.yaml
examples/requests/: curl.sh  mcp.http
policy/: tools.yaml
scripts/: README.md  build_validator.py  check_coverage.py  mock_gotify_server.py  post_release_verification.py  release_monitor.py  release_rollback.py  run_coverage.sh  run_tests.sh  security-validation.py  test_config.py  test_harness.py  test_scenarios.json  test_strategy.py  validate_container_workflow.py  validate_yaml_json.py  version_manager.py
server/: __init__.py  audit.py  main.py  mcp.py  notifications.py  policy.py  resource_limits.py  security.py  tools.py
src/burly_mcp/: __init__.py  audit.py  config.py  confirmation.py  feature_detection.py  py.typed  resource_limits.py  runtime_metadata.py  security.py
src/burly_mcp/notifications/: __init__.py  manager.py
src/burly_mcp/policy/: __init__.py  dir_loader.py  engine.py
src/burly_mcp/server/: __init__.py  main.py  mcp.py
src/burly_mcp/tools/: __init__.py  registry.py
test_data/blog/stage/: test-post.md
tests/: HTTP_BRIDGE_TEST_MIGRATION_PLAN.md  README.md  __init__.py  conftest.py  run_integration_tests.py  test_end_to_end.py  test_integration.py  test_mcp.py  test_notifications.py  test_policy.py  test_security.py
tests/fixtures/: test_policy.yaml
tests/integration/: __init__.py  conftest.py  test_docker_integration.py  test_final_validation.py  test_final_validation_simple.py  test_mcp_protocol.py  test_system_integration.py
tests/unit/: __init__.py  test_audit.py  test_config.py  test_framework_verification.py  test_http_bridge.py  test_notifications.py  test_policy.py  test_resource_limits.py  test_security.py  test_server.py  test_server_main.py  test_tools.py
